# scientific-concept-evolution-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
benchmarks/ablation/: 20251228_132259_detail.csv  20251228_134331_summary.csv
benchmarks/clustering/: 20251228_125125.csv  20251228_132259.csv  20251228_134331.csv  20251228_160228.csv  20251228_160810.csv
benchmarks/pipeline/: 20251228_125125.csv  20251228_132259.csv  20251228_134331.csv  20251228_160228.csv  20251228_160810.csv  20251228_160810_summary.csv  latency_20251228_123007.csv
doc/: proposal.md
doc/report/: acmart.cls  main.tex  references.bib
doc/report/benchmarks/: ablation.csv  pipeline_summary.csv
notebooks/: case_studies.ipynb  drift_analysis.ipynb  get_arxiv_data.ipynb  scet.ipynb
scripts/: embed_milvus.py  embed_milvus_slurm.sh  generate_embeddings.py  generate_embeddings.sh  ingest_metadata.py  init_db.py  search.py  send_text.py  submit_embeddings.sh  verify_milvus.py
scripts/core/: db.py
scripts/utilities/: embeddings.py  metadata.py  milvus.py
src/: app.py  build_indices.py  case_studies.ipynb  create_benchmarks.py  embed_milvus.py  embed_milvus_slurm.sh  pipeline.py  test_search.py
src/scet/: search.py
src/scet/core/: models.py
src/utilities/: aggregate.py  cluster.py  embeddings.py  metadata.py  milvus.py  search.py
