[project]
name = "scientific-concept-evolution-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaggle>=1.8.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
]
