[project]
name = "scientific-concept-evolution-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaggle>=1.8.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.9",
    "sentence-transformers>=5.1.2",
    "prefect>=2.14.0",
    "pymilvus>=2.3.0",
    "sqlalchemy>=2.0.0",
    "boto3>=1.34.0",
    "pgvector>=0.2.0",
    "sqlalchemy-orm>=1.2.10",
    "tool>=0.8.0",
    "plotly>=6.5.0",
    "streamlit>=1.52.1",
]
